# AN

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  flake.nix  install.sh
.github/workflows/: ci.yml  release.yml
apps/: anytype.toml  audacity.toml  bitwarden.toml  blender.toml  brave.toml  calibre.toml  cryptomator.toml  discord.toml  firefox.toml  flameshot.toml  gimp.toml  inkscape.toml  joplin.toml  kdenlive.toml  keepassxc.toml  krita.toml  libreoffice.toml  logseq.toml  neovim.toml  obsidian.toml  postman.toml  signal.toml  slack.toml  spotify.toml  standardnotes.toml  telegram.toml  thunderbird.toml  vlc.toml  vscode.toml  zoom.toml
docs/: index.md
docs/api/: README.md  db.md  handlers.md
docs/design/: README.md  architecture.md  error-handling.md
docs/guides/: README.md  commands.md  getting-started.md  installation.md
docs/pages/: _config.yml
docs/readmeLang/: README_ar.md  README_fa.md  README_ja.md  README_ru.md  README_uk.md  README_zh-CN.md  README_zh-TW.md
docs/spec/: README.md  app-db-schema.md  info.md  install.md  link.md  list.md  remove.md  search.md  sync.md  update.md
packaging/: README.md
packaging/aur/: PKGBUILD  PKGBUILD-git  README.md
packaging/debian/: README.md  changelog  control  copyright  rules
packaging/homebrew/: README.md  an.rb
pkg/aur/: .SRCINFO  PKGBUILD
pkg/homebrew/: an.rb
snap/: README.md  snapcraft.yaml
src/: cli.rs  errors.rs  lib.rs  main.rs
src/commands/: install.rs  link.rs  list.rs  mod.rs  (+4 more)
tests/: cli_tests.rs  info_tests.rs  install_tests.rs  list_tests.rs  search_tests.rs
(+18 files in other folders)
