[package]
name = "an"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "AN (安装) - Unified Package Manager for Linux"
license = "MIT"
repository = "https://github.com/clearclown/AN"
homepage = "https://github.com/clearclown/AN"
documentation = "https://github.com/clearclown/AN#readme"
readme = "README.md"
authors = ["clearclown"]
keywords = ["package-manager", "linux", "appimage", "deb", "flatpak"]
categories = ["command-line-utilities"]
exclude = [
    ".github/",
    "docs/",
    "tests/",
    "_legacy/",
    "*.md",
    "!README.md",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
thiserror = "1"
colored = "2"
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver = "1"
which = "6"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[[bin]]
name = "an"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
